Atualização do projeto,Login funcional

--- a/views/cadastroIdoso.ejs
+++ b/views/cadastroIdoso.ejs
@@ -40,6 +40,6 @@
         </div>
     </form>
 </div>
-<%- include('styleCadastro'); %>
+<%- include('../funcionais/styleCadastro'); %>
 </body>
 </html>
