--- a/views/pagcuid.ejs
+++ b/views/pagcuid.ejs
@@ -10,9 +10,9 @@
 <body>
    <div class="form">
     <form action="" method="GET">
-        <%- include('fieldsetCuid'); %>
+        <%- include('../funcionais/fieldsetCuid'); %>
     </form>
    </div>
-   <%- include('style'); %>
+   <%- include('../funcionais/style'); %>
 </body>
 </html>
