--- a/views/pagmed.ejs
+++ b/views/pagmed.ejs
@@ -10,9 +10,9 @@
 <body>
    <div class="logo">
     <form action="" method="GET">
-        <%- include('fieldsetMed'); %>
+        <%- include('../funcionais/fieldsetMed'); %>
     </form>
    </div>
-   <%- include('style'); %>
+   <%- include('../funcionais/style'); %>
 </body>
 </html>
