--- a/views/criarDieta.ejs
+++ b/views/criarDieta.ejs
@@ -57,6 +57,6 @@
         </div>
     </form>
 </div>
-<%- include('styleCadastro'); %>
+<%- include('../funcionais/styleCadastro'); %>
 </body>
 </html>
